# zanzibar-backend

./: .env.secrets.example  .gitignore  LICENSE  README.md  docker-compose.yml  local.env  run.sh
common/: app_config.py  app_logger.py
common/helpers/: auth.py
common/models/: __init__.py  email.py  login_method.py  organization.py  person.py  person_organization_role.py  todo.py
common/repositories/: __init__.py  base.py  email.py  factory.py  login_method.py  organization.py  person.py  person_organization_role.py  todo.py
common/services/: __init__.py  auth.py  email.py  login_method.py  organization.py  person.py  person_organization_role.py  todo.py
common/tasks/: send_message.py
flask/: Dockerfile  docker-entrypoint.sh  logger.py  main.py  pyproject.toml  version.py
flask/app/: __init__.py
flask/app/helpers/: decorators.py  exceptions.py  response.py  string_utils.py
flask/app/migrations/: 0000000001_0000000000_migration.py  0000000002_0000000001_migration.py  0000000003_0000000002_migration.py  0000000004_0000000003_migration.py  0000000005_0000000004_migration.py  0000000006_0000000005_migration.py
flask/app/views/: __init__.py  auth.py  organization.py  person.py  todo.py
services/email_transmitter/: Dockerfile  config.json
services/postgres/: Dockerfile  dbVersion.sql  postgresql.conf
services/rabbitmq/: Dockerfile  init.sh
